maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:23: error: not found: value mem
  mem=getDirection
  ^PledgeMaze:26: error: not found: value mem
    setDirection(mem)
                 ^PledgeMaze:44: error: not found: value sommeAngle
    sommeAngle+=1
    ^PledgeMaze:48: error: not found: value sommeAngle
    sommeAngle+=1
    ^PledgeMaze:52: error: not found: value sommeAngle
    sommeAngle+=1
    ^PledgeMaze:56: error: not found: value sommeAngle
  sommeAngle-=1
  ^